# CodeAtlas-LLM

./: .env  .env.example  .gitignore  MIGRATION_GUIDE.md  README.md  config.py  docker-compose.yml  drop_index.py  hybrid_rag_langchain.py  main.py  pyproject.toml  requirements.txt  server.py  setup_hybrid_data.py  testConsumer.py  testFront.html  test_agent_tools.py  test_kafka_connection.py  vectorizer.py
bullMQ/: __init__.py  conection.py  test_queue.py  test_worker.py  workerRegistry.py
bullMQ/helpers/: __init__.py  queueHelper.py  workerHelper.py
components/: __init__.py  aiModelAdapter.py  ragAgent.py  tools.py
dbModule/: GraphDb.py  GraphStore.py  MongoDb.py  README.md  VectorDb.py  VectorStore.py  __init__.py  connection.py
dbModule/mongoDb/: __init__.py  initDb.py
dbModule/mongoDb/schemas/: __init__.py  chat_schema.py  conversasion_schema.py  markdown_schema.py  project_schema.py  user_schema.py
dbModule/schemas/: __init__.py  chat_schema.py  conversasion_schema.py  markdown_schema.py  project_schema.py  user_schema.py
examples/: project_example.py
kafkaService/: KafakaHelper.py  README.md  __init__.py  admin.py  connection.py  createComsumer.py  createProducer.py  example_usage.py  kafkaAdmin.py  topicsRegistry.py
kafkaService/helpers/: __init__.py  createComsumer.py  createProducer.py
middleware/: authMiddleware.py
requestDTOs/: chatDTO.py
