[tool.poetry]
name = "codeatlas-llm"
version = "0.1.0"
description = "CodeAtlas LLM project"
authors = ["Abhinanda Ghosh <abhibadan.ghosh@webskitters.in>"]
readme = "README.md"
packages = [
    { include = "dbModule" },
    { include = "middleware" },
    { include = "components" },
    { include = "requestDTOs" },
    { include = "bullMQ" },
    { include = "kafkaService" },
]
# package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.128.0"
uvicorn = "^0.38.0"
chromadb = "^1.3.7"
langchain = "^1.1.3"
langchain-chroma = "^1.1.0"
langchain-community = "^0.4.1"
langchain-core = "^1.2.0"
langchain-google-genai = "^4.0.0"
langchain-text-splitters = "^1.0.0"
python-dotenv = "^1.2.1"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
requests = "^2.32.5"
numpy = "^2.3.5"
neo4j = "^6.1.0"
pymongo = "^4.16.0"
mongoengine = "^0.29.0"
bullmq = "^2.19.4"
kafka-python = "^2.0.2"
pyjwt = "^2.11.0"


[tool.poetry.scripts]
start = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
